--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "20.8.6",
