--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
+    "eslint-config-trybe-fundamentals": "^1.1.1",
+    "framer-motion": "^10.16.7",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
@@ -20,7 +21,7 @@
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.54.0",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "tailwindcss": "^3"
