--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "eslint-config-trybe-fundamentals": "^1.1.1",
     "framer-motion": "^10.16.7",
     "next": "13.5.5",
