--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "autoprefixer": "^10",
