--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
